--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700' rel='stylesheet' type='text/css'>
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <title>Joremipsum</title>
   </head>
@@ -12,8 +13,8 @@
         <div class="navigation-logo clearfix">
           <img src="img/bell.png" alt="Logo" width="29" height="32">
           <div class="logo-tagline">
-            <span class="tagline-black">Site Name</span><br>
-            <span class="tagline-light">caption goes here</span>
+            <p><span class="tagline-black">Site Name</span><br>
+            <span class="tagline-light">caption goes here</span><p>
           </div>
         </div>
         <nav class="main-navigation">
@@ -100,8 +101,8 @@
     <footer class="main-footer">
       <div class="container">
         <span class="dark">Copyright(c) website name.</span>
-        <span class="light"> Designed by: www.alltemplateneeds.com</span>
-        <span class="dark">/  Images from: www.wallpaperswide.com, www.photorack.net</span>
+        <span class="light"> Designed by: <a href="https://alltemplateneeds.com">www.alltemplateneeds.com</a></span>
+        <span class="dark">/  Images from: <a href="https://wallpaperswide.com">www.wallpaperswide.com</a>, <a href="https://photorack.net">www.photorack.net</a></span>
       </div>
     </footer>
     <script src="../joremipsum/script/less.js" type="text/javascript"></script>
