--- a/projects/thanksgiving-master/index.html
+++ b/projects/thanksgiving-master/index.html
@@ -9,7 +9,7 @@
     <header class="main-header">
       <div class="container">
         <div class="navigation-logo">
-          <a href="#"><img src="../img/small-logo.png"></a>  
+          <a href="#"><img src="img/small-logo.png"></a>  
         </div>
         <nav class="main-navigation">
           <ul>
@@ -45,7 +45,7 @@
         </div>
         <div class="client">
           <h2>Client of the week</h2>
-          <img src="../img/client.png">
+          <img src="img/client.png">
           <h3>Jessy Doe</h3>
           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered<br> alteration in someform, by injected humour, or randomised words.</p>
         </div>
@@ -55,7 +55,7 @@
       <div class="news clearfix">
         <h2>Last News</h2>
         <div class="news-item">
-          <img src="../img/news1.jpg">
+          <img src="img/news1.jpg">
           <div class="news-description">
             <h3>Lorem Ipsum</h3>
             <p>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
@@ -63,7 +63,7 @@
           </div>
         </div>
         <div class="news-item">
-          <img src="../img/news2.jpg">
+          <img src="img/news2.jpg">
           <div class="news-description">
             <h3>Lorem Ipsum</h3>
             <p>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="news-item">
-          <img src="../img/news3.jpg">
+          <img src="img/news3.jpg">
           <div class="news-description">
             <h3>Lorem Ipsum</h3>
             <p>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="news-item">
-          <img src="../img/news4.jpg">
+          <img src="img/news4.jpg">
           <div class="news-description">
             <h3>Lorem Ipsum</h3>
             <p>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
@@ -92,22 +92,22 @@
        </div>
         <h2>Featured products</h2>
         <div class="products-item item-left">
-          <a href="#"><img src="../img/products1.jpg"></a>
+          <a href="#"><img src="img/products1.jpg"></a>
         </div>
         <div class="products-item">
-          <a href="#"><img src="../img/products2.jpg"></a>
+          <a href="#"><img src="img/products2.jpg"></a>
         </div>
         <div class="products-item">
-          <a href="#"><img src="../img/products3.jpg"></a>
+          <a href="#"><img src="img/products3.jpg"></a>
         </div>
         <div class="products-item item-left">
-          <a href="#"><img src="../img/products4.jpg"></a>
+          <a href="#"><img src="img/products4.jpg"></a>
         </div>
         <div class="products-item">
-          <a href="#"><img src="../img/products5.jpg"></a>
+          <a href="#"><img src="img/products5.jpg"></a>
         </div>
         <div class="products-item">
-          <a href="#"><img src="../img/products6.jpg"></a>
+          <a href="#"><img src="img/products6.jpg"></a>
         </div>
         <div class="decoration-white white-bottom">
         </div>
