--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,9 @@
     		<li>
     			<a href="projects/Minimo/index.html">Minimo</a>
     		</li>
+        <li>
+          <a href="projects/Platform_website/index.html">Platform</a>
+        </li>
     	</ul>
     </main>
   </body>
