--- a/projects.html
+++ b/projects.html
@@ -2,28 +2,40 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>Проекты</title>
   </head>
   <body>
     <main>
-    	<h1>Проекты</h1>
-    	<ul>
-    		<li>
-    			<a href="projects/198655-sedona-master/index.html">Седона (HTML Academy)</a>
-    		</li>
-        <li>
-          <a href="projects/thanksgiving-master/index.html">Thanksgiving</a>
-        </li>
-        <li>
-          <a href="projects/joremipsum-master/index.html">Joremipsum</a>
-        </li>
-    		<li>
-    			<a href="projects/Minimo/index.html">Minimo</a>
-    		</li>
-        <li>
-          <a href="projects/Platform_website/index.html">Platform</a>
-        </li>
-    	</ul>
+      <div class="wrapper clearfix">
+      	<ul>
+      		<li>
+      			<a href="projects/198655-sedona-master/index.html">
+              <img src="img/sedona_500x344.jpg" alt="Седона (HTML Academy)" width="500" height="342">
+            </a>
+      		</li>
+          <li>
+            <a href="projects/thanksgiving-master/index.html">
+              <img src="img/Thanksgiving_500x341.jpg" alt="Thanksgiving" width="500" height="338">
+            </a>
+          </li>
+          <li>
+            <a href="projects/joremipsum-master/index.html">
+              <img src="img/Joremipsum_500x347.jpg" alt="Joremipsum" width="500" height="346">
+            </a>
+          </li>
+      		<li>
+      			<a href="projects/Minimo/index.html">
+              <img src="img/minimo_500x344.jpg" alt="Minimo" width="500" height="341">
+            </a>
+      		</li>
+          <li>
+            <a href="projects/Platform_website/index.html">
+              <img src="img/Platform_500x319.jpg" alt="Platform" width="500" height="319">
+            </a>
+          </li>
+      	</ul>
+      </div>
     </main>
   </body>
 </html>
