--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
       	<ul>
       		<li>
       			<a href="projects/198655-sedona-master/index.html">
-              <img src="img/sedona_500x344.jpg" alt="Седона (HTML Academy)" width="500" height="342">
+              <img src="img/sedona_500x344.jpg" alt="Седона (HTML Academy)" width="500" height="338">
             </a>
       		</li>
           <li>
@@ -21,7 +21,7 @@
           </li>
           <li>
             <a href="projects/joremipsum-master/index.html">
-              <img src="img/Joremipsum_500x347.jpg" alt="Joremipsum" width="500" height="345">
+              <img src="img/Joremipsum_500x347.jpg" alt="Joremipsum" width="500" height="341">
             </a>
           </li>
       		<li>
@@ -31,7 +31,12 @@
       		</li>
           <li>
             <a href="projects/Platform_website/index.html">
-              <img src="img/Platform_500x319.jpg" alt="Platform" width="500" height="316">
+              <img src="img/Platform_500x319.jpg" alt="Platform" width="500" height="356">
+            </a>
+          </li>
+          <li>
+            <a href="projects/Glow/index.html">
+              <img src="img/glow_500x408.jpg" alt="Glow" width="500" height="356">
             </a>
           </li>
       	</ul>
