--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,11 @@
               <img src="img/glow_500x408.jpg" alt="Glow" width="500" height="356">
             </a>
           </li>
+          <li>
+            <a href="projects/Nerds/index.html">
+              <img src="img/nerds.jpg" alt="Nerds" width="500" height="360">
+            </a>
+          </li>
       	</ul>
       </div>
     </main>
