Add new project

--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,11 @@
               <img src="img/nerds.jpg" alt="Nerds" width="500" height="360">
             </a>
           </li>
+          <li>
+            <a href="projects/blog-final/index.html">
+              <img src="img/blog-final.jpg" alt="Nerds" width="500" height="360">
+            </a>
+          </li>
       	</ul>
       </div>
     </main>
