--- a/projects.html
+++ b/projects.html
@@ -11,42 +11,82 @@
       	<ul>
       		<li>
       			<a href="projects/198655-sedona-master/index.html">
-              <img src="img/sedona_500x344.jpg" alt="Седона (HTML Academy)" width="500" height="338">
+              <div class="wrapper-laptop">
+                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
+              </div>
+              <div class="portfolio-item">
+                <img src="img/sedona.jpg" alt="Sedona" width="410" height="256">
+              </div>
             </a>
       		</li>
           <li>
             <a href="projects/thanksgiving-master/index.html">
-              <img src="img/Thanksgiving_500x341.jpg" alt="Thanksgiving" width="500" height="338">
+              <div class="wrapper-laptop">
+                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
+              </div>
+              <div class="portfolio-item">
+                <img src="img/thanksgiving.jpg" alt="Thanksgiving" width="410" height="256">
+              </div>
             </a>
           </li>
           <li>
             <a href="projects/joremipsum-master/index.html">
-              <img src="img/Joremipsum_500x347.jpg" alt="Joremipsum" width="500" height="341">
+              <div class="wrapper-laptop">
+                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
+              </div>
+              <div class="portfolio-item">
+                <img src="img/joremipsum.jpg" alt="Joremipsum" width="410" height="256">
+              </div>
             </a>
           </li>
       		<li>
       			<a href="projects/Minimo/index.html">
-              <img src="img/minimo_500x344.jpg" alt="Minimo" width="500" height="341">
+              <div class="wrapper-laptop">
+                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
+              </div>
+              <div class="portfolio-item">
+                <img src="img/minimo.jpg" alt="Minimo" width="410" height="256">
+              </div>
             </a>
       		</li>
           <li>
             <a href="projects/Platform_website/index.html">
-              <img src="img/Platform_500x319.jpg" alt="Platform" width="500" height="356">
+              <div class="wrapper-laptop">
+                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
+              </div>
+              <div class="portfolio-item">
+                <img src="img/platform.jpg" alt="Platform" width="410" height="256">
+              </div>
             </a>
           </li>
           <li>
             <a href="projects/Glow/index.html">
-              <img src="img/glow_500x408.jpg" alt="Glow" width="500" height="356">
+              <div class="wrapper-laptop">
+                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
+              </div>
+              <div class="portfolio-item">
+                <img src="img/glow-psd-theme.jpg" alt="Glow" width="410" height="256">
+              </div>
             </a>
           </li>
           <li>
             <a href="projects/Nerds/index.html">
-              <img src="img/nerds.jpg" alt="Nerds" width="500" height="360">
+              <div class="wrapper-laptop">
+                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
+              </div>
+              <div class="portfolio-item">
+                <img src="img/nerds-index.jpg" alt="Nerds" width="410" height="256">
+              </div>
             </a>
           </li>
           <li>
             <a href="projects/blog-final/index.html">
-              <img src="img/blog-final.jpg" alt="Nerds" width="500" height="360">
+              <div class="wrapper-laptop">
+                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
+              </div>
+              <div class="portfolio-item">
+                <img src="img/blog-final.jpg" alt="Blog" width="410" height="256">
+              </div>
             </a>
           </li>
       	</ul>
