--- a/projects.html
+++ b/projects.html
@@ -89,6 +89,16 @@
               </div>
             </a>
           </li>
+          <li>
+            <a href="projects/build/index.html">
+              <div class="wrapper-laptop">
+                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
+              </div>
+              <div class="portfolio-item">
+                <img src="" alt="Mishka" width="410" height="256">
+              </div>
+            </a>
+          </li>
       	</ul>
       </div>
     </main>
