--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,16 @@
       <div class="wrapper clearfix">
         <ul>
           <li>
+            <a href="projects/build/index.html">
+              <div class="wrapper-laptop">
+                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
+              </div>
+              <div class="portfolio-item">
+                <img src="img/mishka.jpg" alt="Mishka" width="410" height="256">
+              </div>
+            </a>
+          </li>
+          <li>
             <a href="projects/198655-sedona-master/index.html">
               <div class="wrapper-laptop">
                 <img src="img/laptop.png" alt="Laptop" width="541" height="311">
@@ -86,16 +96,6 @@
               </div>
               <div class="portfolio-item">
                 <img src="img/platform.jpg" alt="Platform" width="410" height="256">
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="projects/build/index.html">
-              <div class="wrapper-laptop">
-                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
-              </div>
-              <div class="portfolio-item">
-                <img src="" alt="Mishka" width="410" height="256">
               </div>
             </a>
           </li>
