--- a/projects.html
+++ b/projects.html
@@ -20,12 +20,32 @@
             </a>
           </li>
           <li>
+            <a href="projects/198655-device-master/index.html">
+              <div class="wrapper-laptop">
+                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
+              </div>
+              <div class="portfolio-item">
+                <img src="img/device.jpg" alt="Device" width="410" height="256">
+              </div>
+            </a>
+          </li>
+          <li>
             <a href="projects/198655-sedona-master/index.html">
               <div class="wrapper-laptop">
                 <img src="img/laptop.png" alt="Laptop" width="541" height="311">
               </div>
               <div class="portfolio-item">
                 <img src="img/sedona.jpg" alt="Sedona" width="410" height="256">
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="projects/Nerds/index.html">
+              <div class="wrapper-laptop">
+                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
+              </div>
+              <div class="portfolio-item">
+                <img src="img/nerds-index.jpg" alt="Nerds" width="410" height="256">
               </div>
             </a>
           </li>
@@ -50,12 +70,22 @@
             </a>
           </li>
           <li>
-            <a href="projects/Nerds/index.html">
+            <a href="projects/Minimo/index.html">
               <div class="wrapper-laptop">
                 <img src="img/laptop.png" alt="Laptop" width="541" height="311">
               </div>
               <div class="portfolio-item">
-                <img src="img/nerds-index.jpg" alt="Nerds" width="410" height="256">
+                <img src="img/minimo.jpg" alt="Minimo" width="410" height="256">
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="projects/Platform_website/index.html">
+              <div class="wrapper-laptop">
+                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
+              </div>
+              <div class="portfolio-item">
+                <img src="img/platform.jpg" alt="Platform" width="410" height="256">
               </div>
             </a>
           </li>
@@ -76,26 +106,6 @@
               </div>
               <div class="portfolio-item">
                 <img src="img/joremipsum.jpg" alt="Joremipsum" width="410" height="256">
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="projects/Minimo/index.html">
-              <div class="wrapper-laptop">
-                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
-              </div>
-              <div class="portfolio-item">
-                <img src="img/minimo.jpg" alt="Minimo" width="410" height="256">
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="projects/Platform_website/index.html">
-              <div class="wrapper-laptop">
-                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
-              </div>
-              <div class="portfolio-item">
-                <img src="img/platform.jpg" alt="Platform" width="410" height="256">
               </div>
             </a>
           </li>
