--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,27 @@
       <div class="wrapper clearfix">
         <ul>
           <li>
+            <a href="projects/iaa/build/index.html">
+              <div class="wrapper-laptop">
+                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
+              </div>
+              <div class="portfolio-item">
+                <img src="img/iaa.jpg" alt="IAA" width="410" height="256">
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="projects/mysupp-map/build/index.html">
+              <div class="wrapper-laptop">
+                <img src="img/laptop.png" alt="Laptop" width="541" height="311">
+              </div>
+              <div class="portfolio-item">
+                <img src="img/mysupp.jpg" alt="MySupp" width="410" height="256">
+              </div>
+            </a>
+          </li>
+
+          <li>
             <a href="projects/build/index.html">
               <div class="wrapper-laptop">
                 <img src="img/laptop.png" alt="Laptop" width="541" height="311">
