Правит кpreview картинку для мастер-вуда

--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
                 <img src="img/laptop.png" alt="Laptop" width="541" height="311">
               </div>
               <div class="portfolio-item">
-                <img src="img/master-wood.jpg" alt="IAA" width="410" height="256">
+                <img src="img/master-wood-2.jpg" alt="IAA" width="410" height="256">
               </div>
             </a>
           </li>
