Added check video

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <main>
     	<h1>Главная</h1>
     	<a href="projects.html">Проекты</a>
+        <video data-has-played="false" muted="muted" playsinline="playsinline" autoplay="autoplay">
+            <source src="video/boards.mp4">
+        </video>
     </main>
   </body>
 </html>
