--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <main>
     	<h1>Главная</h1>
     	<a href="projects.html">Проекты</a>
-        <video data-has-played="false" muted="muted" playsinline="playsinline" autoplay="autoplay">
+        <video data-has-played="false" muted="muted" playsinline="playsinline" autoplay="autoplay" controls>
             <source src="video/boards.mp4">
         </video>
     </main>
