Добавляет прогресс времени

--- a/progress-vacation/index.html
+++ b/progress-vacation/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="intro">
         <div class="wrapper">
-            <h1>Vacation</h1>
+            <h1>Vacation progress:</h1>
             <div class="progress-wrapper">
                 <div class="progress-line">
 
