--- a/progress-vacation/index.html
+++ b/progress-vacation/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1, maximum-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
-    <title>Отпуск</title>
+    <title>Return to the special girl</title>
 </head>
 <body>
     <div class="intro">
