--- a/progress-vacation/index.html
+++ b/progress-vacation/index.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="statistic">
-                <h2>Before Pasha’s return to Russia, there are:</h2>
+                <h2>Before the return of Pavel and Anna to Russia, there are:</h2>
                 <p>Days: <span class="statistic__days"></span></p>
                 <p>Hours <span class="statistic__hours"></span></p>
                 <p>Minutes <span class="statistic__minutes"></span></p>
