Удаляет старые даты из таблицы

--- a/progress-vacation/index.html
+++ b/progress-vacation/index.html
@@ -25,22 +25,14 @@
 
         <div class="statistic hidden" data-tab-value="countdown">
             <h2>Before the return of Pavel and Anna to Russia, there are:</h2>
-            <p>Days: <span class="statistic__days"></span></p>
-            <p>Hours <span class="statistic__hours"></span></p>
-            <p>Minutes <span class="statistic__minutes"></span></p>
-            <p>Seconds <span class="statistic__seconds"></span></p>
+            <p>Days: <span class="statistic__days">9</span></p>
+            <p>Hours <span class="statistic__hours">9</span></p>
+            <p>Minutes <span class="statistic__minutes">9</span></p>
+            <p>Seconds <span class="statistic__seconds">9</span></p>
         </div>
 
         <div class="table hidden" data-tab-value="calendar">
             <table>
-                <tr data-time="1573639200000">
-                    <td>50%</td>
-                    <td>November 13 at 13:00</td>
-                </tr>
-                <tr data-time="1573727700000">
-                    <td>55%</td>
-                    <td>November 14 at 13:35</td>
-                </tr>
                 <tr data-time="1573816320000">
                     <td>60%</td>
                     <td>November 15 at 14:12</td>
