update main photo

--- a/ilya-dr/index.html
+++ b/ilya-dr/index.html
@@ -3398,9 +3398,8 @@
                 <div dir="ltr" class="GridComponent-nf79gm-0 cMJFwl">
                   <div dir="ltr" class="GridComponent-nf79gm-0 cUiqqC">
                     <div class="ImagePlaceholder-sc-11u25v2-0 _StyledImagePlaceholder-gu1fm2-0 kvTWeV"><img
-                      srcSet="https://ichef.bbci.co.uk/news/240/cpsprodpb/1208F/production/_115217837_biden_harris_getty_976-2.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsprodpb/1208F/production/_115217837_biden_harris_getty_976-2.jpg 320w, https://ichef.bbci.co.uk/news/480/cpsprodpb/1208F/production/_115217837_biden_harris_getty_976-2.jpg 480w, https://ichef.bbci.co.uk/news/624/cpsprodpb/1208F/production/_115217837_biden_harris_getty_976-2.jpg 624w, https://ichef.bbci.co.uk/news/800/cpsprodpb/1208F/production/_115217837_biden_harris_getty_976-2.jpg 800w"
                       alt="Joe Biden and Kamala Harris"
-                      src="https://ichef.bbci.co.uk/news/640/cpsprodpb/1208F/production/_115217837_biden_harris_getty_976-2.jpg"
+                      src="img/iluha.png"
                       width="976" class="StyledImg-sc-7vx2mr-0 dQLeqZ"/>
                       <p role="text" class="Copyright-sc-11lgtw-0 hDvIfz"><span
                         class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH">Автор фото, </span><span lang="en-GB">Getty Images</span>
@@ -3409,7 +3408,7 @@
                   <div dir="ltr" class="GridComponent-nf79gm-0 dsnOxB">
                     <figcaption class="Caption-sc-16x70so-0 bHTIoy"><span
                       class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH">Подпись к фото, </span>
-                      <p>Байден в качестве вице-президента выбрал Камалу Харрис, что позволило удержать центристских
+                      <p>Эйхельберг в качестве вице-президента выбрал Алию Бажайкину, что позволило удержать центристских
                         избирателей</p></figcaption>
                   </div>
                 </div>
