Добавил поздравление от Иры

--- a/ilya-dr/index.html
+++ b/ilya-dr/index.html
@@ -3338,27 +3338,8 @@
                                                                      class="SubHeading-sc-1kh1qhu-1 cCDAFN">1. Здоровья, здоровья, здоровья</h2></div>
             <div dir="ltr" class="GridComponent-nf79gm-0 gBXDzy"><p class="Paragraph-k859h4-0 gvYoJ">Илья, с днем рождения! желаю великой жизненной гармонии, побольше прекрасных моментов, счастья и любви! не болей!</p></div>
             <div dir="ltr" class="GridComponent-nf79gm-0 gBXDzy"><h2 id="2Кампания-изза-кулис" tabindex="-1"
-                                                                     class="SubHeading-sc-1kh1qhu-1 cCDAFN">2.Кампания
-              из-за кулис</h2></div>
-            <div dir="ltr" class="GridComponent-nf79gm-0 gBXDzy"><p class="Paragraph-k859h4-0 gvYoJ">За свою
-              политическую карьеру Джо Байден заработал репутацию человека, постоянно попадающего впросак со своими
-              высказываниями. Недостаток красноречия пустил под откос его попытки стать кандидатом в президенты в 1987 и
-              2007 годах.</p></div>
-            <div dir="ltr" class="GridComponent-nf79gm-0 gBXDzy"><p class="Paragraph-k859h4-0 gvYoJ">В ходе третьей
-              кампании ему тоже случалось мямлить, но не столь часто, и не привлекая к этому особого внимания. </p>
-            </div>
-            <div dir="ltr" class="GridComponent-nf79gm-0 gBXDzy"><p class="Paragraph-k859h4-0 gvYoJ">Его оттягивал на
-              себя, во-первых, Дональд Трамп, служивший неисчерпаемым источником новостей. Во-вторых, более важные темы:
-              коронавирус, протесты, последовавшие за гибелью Джорджа Флойда, и экономические трудности.</p></div>
-            <div dir="ltr" class="GridComponent-nf79gm-0 gBXDzy"><p class="Paragraph-k859h4-0 gvYoJ">Но часть эффекта
-              следует отнести на счет стратегии, осознанно выбранной штабом Байдена: меньше показывать кандидата народу
-              и не усердствовать с мероприятиями, чтобы его усталость или неосмотрительность не привели к какому-нибудь
-              ляпсусу.</p></div>
-            <div dir="ltr" class="GridComponent-nf79gm-0 gBXDzy"><p class="Paragraph-k859h4-0 gvYoJ">Вероятно, в
-              нормальных условиях такая линия поведения сработала бы против него, а уколы Трампа, иронизировавшего над
-              &quot;прячущимся&quot; соперником, возымели бы действие. Но при коронавирусе она не вызывала удивления и
-              осуждения. В результате Байден в основном молчал, а Трамп много говорил, и становился жертвой собственных
-              словесных промахов. </p></div>
+                                                                     class="SubHeading-sc-1kh1qhu-1 cCDAFN">2.Бодрячком</h2></div>
+            <div dir="ltr" class="GridComponent-nf79gm-0 gBXDzy"><p class="Paragraph-k859h4-0 gvYoJ">Не унывать, быть бодрячком и уверенно топать к светлому будущему.</p></div>
             <div dir="ltr" class="GridComponent-nf79gm-0 gBXDzy"><h2 id="3Кто-угодно-лишь-бы-не-Трамп" tabindex="-1"
                                                                      class="SubHeading-sc-1kh1qhu-1 cCDAFN">3. Илья Викторович</h2></div>
             <div dir="ltr" class="GridComponent-nf79gm-0 gBXDzy"><p class="Paragraph-k859h4-0 gvYoJ">Все мы хотим сегодня поздравить многоуважаемого и горячелюбимого Илью Викторовича. А какой он? И - интелегеньный. Л - локаничный. Ь - мягкий. Я - ядрено-пепельный. Он наш лидер, наше вдохновение, наша гордость! Каждый день мы благодарим судьбу за то что мы оказались достойны работать с этим великим и чудесным человеком. Мы желаем ему счастья и здоровья, а остальное само преложется!</p></div>
