--- a/progress-vacation/index.html
+++ b/progress-vacation/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1, maximum-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
-    <title>Return to the special girl</title>
+    <title>До ПМЖ осталось:</title>
 </head>
 <body>
 <div class="intro">
@@ -24,7 +24,7 @@
 <!--        </div>-->
 
         <div class="statistic hidden" data-tab-value="countdown">
-            <h2>Before the return of Pavel and Anna to Russia, there are:</h2>
+            <h2>До ПМЖ осталось:</h2>
             <p>Days: <span class="statistic__days">3</span></p>
             <p>Hours <span class="statistic__hours">3</span></p>
             <p>Minutes <span class="statistic__minutes">3</span></p>
