--- a/just-portfolio/privacy-policy.html
+++ b/just-portfolio/privacy-policy.html
@@ -113,9 +113,10 @@
         <h2>Third-Party Services</h2>
         <p>The app uses the following third-party services to display stock prices:</p>
         <ul>
-            <li><strong>Yahoo Finance API:</strong> Used to fetch current stock prices. This service may collect anonymous usage data according to their own privacy policy.</li>
+            <li><strong>Finnhub API:</strong> Used to fetch current stock prices and company information for US stocks.</li>
+            <li><strong>Yahoo Finance:</strong> Used as a fallback for stocks on European exchanges (London, Germany, Amsterdam).</li>
         </ul>
-        <p>The app is not responsible for the privacy practices of these third-party services.</p>
+        <p>These services may collect anonymous usage data according to their own privacy policies. The app is not responsible for the privacy practices of these third-party services.</p>
 
         <h2>Data Storage</h2>
         <p>All portfolio data (transactions, holdings, settings) is stored exclusively on your device using:</p>
