--- a/projects/country-flag/index.html
+++ b/projects/country-flag/index.html
@@ -531,15 +531,10 @@
                 <p>Test your knowledge of world flags with fun quizzes and challenges. Master all 193 countries!</p>
 
                 <div class="cta-buttons">
-                    <a href="https://apps.apple.com/" class="btn btn-primary">Download on App Store</a>
+                    <a href="https://apps.apple.com/app/country-flag-quiz/id6757229940" class="btn btn-primary">Download on App Store</a>
                     <a href="#features" class="btn btn-secondary">Learn More</a>
                 </div>
 
-                <div class="app-store-badges">
-                    <a href="https://apps.apple.com/">
-                        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 120 40'%3E%3Crect width='120' height='40' fill='black' rx='4'/%3E%3Ctext x='50' y='25' fill='white' font-family='Arial' font-size='12' text-anchor='middle' font-weight='bold'%3EApp Store%3C/text%3E%3C/svg%3E" alt="App Store">
-                    </a>
-                </div>
             </div>
         </div>
     </section>
