--- a/projects/country-flag/index.html
+++ b/projects/country-flag/index.html
@@ -526,7 +526,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Learn Flags of the World 🎌</h1>
+                <h1>Learn Flags of the World 🌍 </h1>
                 <p>Test your knowledge of world flags with fun quizzes and challenges. Master all 193 countries!</p>
 
                 <div class="cta-buttons">
@@ -609,10 +609,10 @@
                     <span class="stat-number">193</span>
                     Flags to Master
                 </div>
-                <div class="stat">
+                <!-- <div class="stat">
                     <span class="stat-number">14</span>
                     Achievements to Unlock
-                </div>
+                </div> -->
                 <div class="stat">
                     <span class="stat-number">4</span>
                     Difficulty Levels
@@ -712,7 +712,7 @@
                     </div>
                 </div>
 
-                <div class="faq-item">
+                <!-- <div class="faq-item">
                     <div class="faq-question">
                         <span>How does Game Center work?</span>
                         <span class="faq-toggle">▼</span>
@@ -720,7 +720,7 @@
                     <div class="faq-answer">
                         <p>Game Center allows you to track achievements and compete on a global leaderboard. Your score is based on correct answers and completion time in the Global Challenge mode.</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="faq-item">
                     <div class="faq-question">
@@ -751,7 +751,7 @@
             <p>&copy; 2025-2026 Country Flag — Quiz. Learn the world, one flag at a time.</p>
             <div class="footer-links">
                 <a href="./privacy-policy.html">Privacy Policy</a>
-                <a href="./terms.html">Supporte</a>
+                <a href="./terms.html">Terms</a>
                 <a href="mailto:karachevpavel@icloud.com">Contact Us</a>
             </div>
             <p style="margin-top: 20px; font-size: 12px; opacity: 0.7;">Made with ❤️ for geography enthusiasts</p>
