--- a/projects/country-flag/privacy-policy.html
+++ b/projects/country-flag/privacy-policy.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <h1>Privacy Policy for Guess the Flag</h1>
-    <p class="last-updated">Last Updated: December 31, 2025</p>
+    <p class="last-updated">Last Updated: January 7, 2026</p>
 
     <h2>Introduction</h2>
     <p>
@@ -53,14 +53,34 @@
 
     <h2>Information We Collect</h2>
     <p>
-        Guess the Flag is designed with your privacy in mind. We do not collect, store, or transmit any personal information.
+        Guess the Flag is designed with your privacy in mind. We collect minimal, non-personal information to understand how the app is used and to improve your experience.
+    </p>
+
+    <h2>Analytics Data</h2>
+    <p>
+        We use Google Firebase Analytics to collect anonymous, aggregated usage data. This helps us understand:
+    </p>
+    <ul>
+        <li>How users interact with different game modes and features</li>
+        <li>Which difficulty levels are most popular</li>
+        <li>App stability and performance metrics</li>
+        <li>General user engagement patterns</li>
+    </ul>
+    <p>
+        <strong>What we collect:</strong> Game mode usage, difficulty level selections, session duration, quiz completion rates, and feature interactions. This data is completely anonymous and aggregated.
+    </p>
+    <p>
+        <strong>Data Retention:</strong> Firebase Analytics data is automatically deleted after 60 months (5 years) of inactivity.
+    </p>
+    <p>
+        <strong>Your Control:</strong> You can disable analytics collection at any time through the app's Settings menu. When you disable analytics, no new data is sent to Firebase, though previously collected data cannot be deleted.
     </p>
 
     <h2>Data Stored Locally</h2>
     <p>The following data is stored only on your device and never transmitted to our servers:</p>
     <ul>
         <li><strong>Game Progress:</strong> Your best scores for each difficulty level</li>
-        <li><strong>Preferences:</strong> Your selected language preference</li>
+        <li><strong>Preferences:</strong> Your selected language preference and analytics consent choice</li>
     </ul>
     <p>
         All data is stored locally using iOS UserDefaults and remains on your device.
@@ -71,17 +91,18 @@
     <ul>
         <li>Personal identification information (name, email, phone number, etc.)</li>
         <li>Location data</li>
-        <li>Device identifiers</li>
-        <li>Usage analytics or statistics</li>
+        <li>Device identifiers (IDFA is not used for tracking purposes)</li>
         <li>Crash reports</li>
-        <li>Any other personal or sensitive information</li>
+        <li>Any personal or sensitive information</li>
     </ul>
 
     <h2>Third-Party Services</h2>
     <p>
-        Guess the Flag does not use any third-party analytics, advertising, or tracking services.
-        The app is completely self-contained and does not connect to any external servers.
+        We use the following third-party service:
     </p>
+    <ul>
+        <li><strong>Google Firebase Analytics:</strong> For anonymous, aggregated usage analytics. Firebase is subject to Google's <a href="https://policies.google.com/privacy" target="_blank">Privacy Policy</a> and <a href="https://firebase.google.com/terms" target="_blank">Firebase Terms of Service</a>. No personal information is shared with Firebase.</li>
+    </ul>
 
     <h2>Children's Privacy</h2>
     <p>
