--- a/projects/country-flag/terms.html
+++ b/projects/country-flag/terms.html
@@ -79,7 +79,7 @@
         <a href="index.html" class="back-link">← Back to Home</a>
 
         <h1>Terms of Service</h1>
-        <p class="last-updated">Last Updated: January 5, 2024</p>
+        <p class="last-updated">Last Updated: January 7, 2026</p>
 
         <h2>1. Acceptance of Terms</h2>
         <p>By downloading, installing, and using the Country Flag Quiz app ("App"), you agree to be bound by these Terms of Service. If you do not agree to these terms, please do not use the App.</p>
@@ -134,15 +134,18 @@
         <p>The App uses third-party services including:</p>
         <ul>
             <li><strong>Apple Game Center:</strong> Subject to Apple's terms</li>
-            <li><strong>Google AdMob:</strong> Subject to Google's terms and privacy policies</li>
+            <li><strong>Google Firebase Analytics:</strong> For anonymous usage analytics. Subject to Google's <a href="https://policies.google.com/privacy" target="_blank">Privacy Policy</a></li>
         </ul>
 
         <p>We are not responsible for these third-party services or their content. Please review their respective terms and policies.</p>
 
-        <h2>10. Advertisements</h2>
+        <h2>10. Analytics and Data Collection</h2>
+        <p>The App collects anonymous, aggregated usage data through Google Firebase Analytics to help us understand user behavior and improve the App. You can control analytics collection through the App's Settings menu. By default, analytics collection requires your explicit consent, which you can grant or revoke at any time. No personal information is collected or shared. For details, please see our <a href="privacy-policy.html">Privacy Policy</a>.</p>
+
+        <h2>11. Advertisements</h2>
         <p>The App contains advertisements served by Google AdMob. You agree to the display of these ads. We do not endorse products or services advertised and are not responsible for advertiser content.</p>
 
-        <h2>11. Modifications to the App</h2>
+        <h2>12. Modifications to the App</h2>
         <p>We reserve the right to:</p>
         <ul>
             <li>Modify or discontinue the App or any features</li>
@@ -152,23 +155,23 @@
 
         <p>We will provide notice of significant changes when possible.</p>
 
-        <h2>12. Termination</h2>
+        <h2>13. Termination</h2>
         <p>We may terminate your access to the App if you violate these Terms. Upon termination, your license to use the App is revoked, and you must delete the App from your device.</p>
 
-        <h2>13. Governing Law</h2>
+        <h2>14. Governing Law</h2>
         <p>These Terms are governed by and construed in accordance with applicable laws, without regard to conflict of law principles.</p>
 
-        <h2>14. Changes to Terms</h2>
+        <h2>15. Changes to Terms</h2>
         <p>We may update these Terms from time to time. Continued use of the App following the posting of revised Terms means you accept and agree to the changes.</p>
 
-        <h2>15. Contact Information</h2>
+        <h2>16. Contact Information</h2>
         <p>If you have questions about these Terms, please contact us:</p>
         <ul>
             <li><strong>Email:</strong> karachevpavel@gmail.com</li>
             <li><strong>App Store:</strong> Use the "Contact Developer" option</li>
         </ul>
 
-        <h2>16. Entire Agreement</h2>
+        <h2>17. Entire Agreement</h2>
         <p>These Terms constitute the entire agreement between you and us regarding the App and supersede all prior or contemporaneous agreements or understandings.</p>
     </div>
 </body>
