--- a/index.html
+++ b/index.html
@@ -564,8 +564,8 @@
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">⚡</div>
-                    <h3>Multiple Game Modes</h3>
-                    <p>Choose from different difficulty levels or challenge yourself in Global Challenge mode.</p>
+                    <h3>3 Quiz Types</h3>
+                    <p>Guess countries from flags, flags from countries, or capitals from flags in any game mode.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">📱</div>
@@ -576,26 +576,61 @@
         </div>
     </section>
 
-    <!-- Difficulty Levels -->
+    <!-- Quiz Types -->
     <section class="difficulty-section" id="levels">
         <div class="container">
-            <h2 class="section-title">Choose Your Challenge 💪</h2>
+            <h2 class="section-title">Three Ways to Quiz 🎮</h2>
+            <p style="text-align: center; color: var(--text); margin-bottom: 40px;">Choose your quiz type and difficulty level</p>
+            <div class="difficulty-grid">
+                <div class="difficulty-card" style="border-left-color: #0066FF;">
+                    <h4>🇺🇳 Guess the Country</h4>
+                    <p>See the flag emoji, pick the country name from 4 options</p>
+                </div>
+                <div class="difficulty-card" style="border-left-color: #00D9FF;">
+                    <h4>🌍 Guess the Flag</h4>
+                    <p>See the country name, select the correct flag from 4 emoji options</p>
+                </div>
+                <div class="difficulty-card" style="border-left-color: #10B981;">
+                    <h4>🏛️ Guess the Capital</h4>
+                    <p>See the flag emoji, name the capital city from 4 options</p>
+                </div>
+            </div>
+
+            <h2 class="section-title" style="margin-top: 60px;">Difficulty Levels 💪</h2>
+            <p style="text-align: center; color: var(--text); margin-bottom: 40px;">Available in all three quiz types</p>
             <div class="difficulty-grid">
                 <div class="difficulty-card easy">
                     <h4>🟢 Easy</h4>
-                    <p>10 countries from the continent of your choice</p>
+                    <p>Popular countries to get started</p>
                 </div>
                 <div class="difficulty-card medium">
                     <h4>🟡 Medium</h4>
-                    <p>25 countries from multiple continents</p>
+                    <p>Well-known countries worldwide</p>
                 </div>
                 <div class="difficulty-card hard">
                     <h4>🔴 Hard</h4>
-                    <p>50 countries with similar flags</p>
+                    <p>Less known countries test your skills</p>
                 </div>
                 <div class="difficulty-card extreme">
                     <h4>🟣 Extreme</h4>
-                    <p>All 193 countries in one ultimate test</p>
+                    <p>Tiny island nations for the ultimate test</p>
+                </div>
+            </div>
+
+            <h2 class="section-title" style="margin-top: 60px;">Game Modes 🏆</h2>
+            <p style="text-align: center; color: var(--text); margin-bottom: 40px;">Play in your preferred style</p>
+            <div class="difficulty-grid">
+                <div class="difficulty-card" style="border-left-color: #F59E0B;">
+                    <h4>📚 Level Rounds</h4>
+                    <p>Learn at your pace with curated rounds for each difficulty</p>
+                </div>
+                <div class="difficulty-card" style="border-left-color: #EF4444;">
+                    <h4>⚔️ Level Challenge</h4>
+                    <p>Achieve a perfect score to unlock and advance levels</p>
+                </div>
+                <div class="difficulty-card" style="border-left-color: #8B5CF6;">
+                    <h4>🌍 Global Challenge</h4>
+                    <p>Master all 193 countries with 5 lives - the ultimate test</p>
                 </div>
             </div>
         </div>
@@ -607,19 +642,19 @@
             <div class="stats-grid">
                 <div class="stat">
                     <span class="stat-number">193</span>
-                    Flags to Master
+                    Countries to Learn
                 </div>
-                <!-- <div class="stat">
-                    <span class="stat-number">14</span>
-                    Achievements to Unlock
-                </div> -->
+                <div class="stat">
+                    <span class="stat-number">3</span>
+                    Quiz Types
+                </div>
                 <div class="stat">
                     <span class="stat-number">4</span>
                     Difficulty Levels
                 </div>
                 <div class="stat">
-                    <span class="stat-number">∞</span>
-                    Play Sessions
+                    <span class="stat-number">3</span>
+                    Game Modes
                 </div>
             </div>
         </div>
@@ -704,11 +739,31 @@
 
                 <div class="faq-item">
                     <div class="faq-question">
+                        <span>What are the three quiz types?</span>
+                        <span class="faq-toggle">▼</span>
+                    </div>
+                    <div class="faq-answer">
+                        <p><strong>Guess the Country:</strong> See the flag emoji and pick the country from 4 text options. <br><strong>Guess the Flag:</strong> See the country name and select the correct flag emoji from 4 options. <br><strong>Guess the Capital:</strong> See the flag emoji and name the capital city from 4 text options.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <div class="faq-question">
                         <span>What are the difficulty levels?</span>
                         <span class="faq-toggle">▼</span>
                     </div>
                     <div class="faq-answer">
-                        <p>Easy: 10 countries from one continent | Medium: 25 countries from multiple continents | Hard: 50 countries with tricky flags | Extreme: All 193 countries in one ultimate challenge.</p>
+                        <p><strong>Easy:</strong> Popular countries to get started <br><strong>Medium:</strong> Well-known countries worldwide <br><strong>Hard:</strong> Less known countries that challenge you | <strong>Extreme:</strong> Tiny island nations for geography experts.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <div class="faq-question">
+                        <span>What are the different game modes?</span>
+                        <span class="faq-toggle">▼</span>
+                    </div>
+                    <div class="faq-answer">
+                        <p><strong>Level Rounds:</strong> Learn at your own pace with curated rounds for each difficulty and quiz type. <br><strong>Level Challenge:</strong> Achieve a perfect score to unlock and advance to the next level. <br><strong>Global Challenge:</strong> Test your ultimate mastery by attempting all 193 countries with 5 lives available.</p>
                     </div>
                 </div>
 
