update privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <h1>Privacy Policy for Guess the Flag</h1>
-    <p class="last-updated">Last Updated: January 7, 2026</p>
+    <p class="last-updated">Last Updated: January 15, 2026</p>
 
     <h2>Introduction</h2>
     <p>
@@ -98,11 +98,41 @@
 
     <h2>Third-Party Services</h2>
     <p>
-        We use the following third-party service:
+        We use the following third-party services:
     </p>
     <ul>
         <li><strong>Google Firebase Analytics:</strong> For anonymous, aggregated usage analytics. Firebase is subject to Google's <a href="https://policies.google.com/privacy" target="_blank">Privacy Policy</a> and <a href="https://firebase.google.com/terms" target="_blank">Firebase Terms of Service</a>. No personal information is shared with Firebase.</li>
+        <li><strong>Google AdMob:</strong> For displaying advertisements in the app. AdMob may collect data to serve personalized ads based on your usage patterns and interests. For more information, visit <a href="https://policies.google.com/technologies/ads" target="_blank">Google's Advertising Policies</a>.</li>
     </ul>
+
+    <h2>Advertisements and Ad Personalization</h2>
+    <p>
+        Our app displays advertisements powered by Google AdMob. These ads may be personalized based on your app usage and browsing behavior within the app to provide more relevant advertising.
+    </p>
+    <p>
+        We use Google's User Messaging Platform (UMP) to manage user consent for:
+    </p>
+    <ul>
+        <li>Data collection for ad personalization</li>
+        <li>Analytics data collection</li>
+        <li>Compliance with privacy regulations (GDPR, CCPA, and other regional privacy laws)</li>
+    </ul>
+    <p>
+        <strong>Your Control:</strong> You can manage your consent preferences at any time by going to Settings > Privacy & Consent in the app. You can also opt out of personalized ads through your device settings.
+    </p>
+
+    <h2>GDPR and Your Privacy Rights</h2>
+    <p>
+        If you are in the European Union or any region with GDPR protections, you have the following rights:
+    </p>
+    <ul>
+        <li><strong>Right to Access:</strong> You can request to know what data we collect about you</li>
+        <li><strong>Right to Withdraw Consent:</strong> You can withdraw your consent for data collection at any time through Settings > Privacy & Consent</li>
+        <li><strong>Right to Object:</strong> You can object to ad personalization and analytics collection</li>
+    </ul>
+    <p>
+        To exercise any of these rights or for privacy-related questions, please contact us at <a href="mailto:karachevpavel@icloud.com">karachevpavel@icloud.com</a>.
+    </p>
 
     <h2>Children's Privacy</h2>
     <p>
